# photo_screen_detection

./: .gitignore  README.md  baseline.py  eda.py  garbage.py  preprocessing.py  pyproject.toml
config/: __init__.py
photo_screen_detection/config/: __init__.py  path.py
photo_screen_detection/utils/: __init__.py  dataset_handler.py  deep.py
